# vfy

./: Cargo.toml  LICENSE  README.md  TODO.md  TODO2.md  usage.txt
docs/: future-test-todos.md  symlink-handling.md  test-ideas.md  test-todo.md  type-matrix.md
docs/outdated/: algorithm-v2.md  type-matrix2.md
scripts/: update-readme-help.sh
src/: cli.rs  compare.rs  compare_clean.rs  main.rs  stats.rs
testdata/dangling_symlink/b/: dangling
testdata/dangling_symlink_diff/a/: dangling
testdata/dangling_symlink_diff/b/: dangling
testdata/different_size/b/: file.txt
testdata/extras/b/: extra.txt
testdata/extras/b/extra_dir/: file.txt
testdata/mixed_results/b/: size_diff.txt
testdata/symlink_dirs/b/real_dir/: file.txt
testdata/symlink_mismatch/a/: target_diff
testdata/symlink_mismatch/b/: target_diff
tests/: integration.rs
tests/integration/: basic.rs  different_fs.rs  edge_cases.rs  errors.rs  flags.rs  harness.rs  inside_missing_extra.rs  main.rs  matrix.rs  release_critical.rs  symlink_loops.rs  symlinks.rs  symlinks_nested.rs
