[package]
name = "vfy"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
blake3 = { version = "1", features = ["rayon", "mmap"] }
ctrlc = "3"
rand = "0.9"
rayon = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serial_test = "3.3.1"
tempfile = "3.24.0"
