[package]
name = "vfy"
version = "0.1.0"
edition = "2021"
description = "Verify backup integrity by comparing directory trees"
license = "MIT"
repository = "https://github.com/defuse/vfy"
homepage = "https://defuse.ca/"
readme = "README.md"
keywords = ["backup", "verify", "integrity", "compare", "filesystem"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
clap = { version = "4", features = ["derive"] }
blake3 = { version = "1", features = ["rayon", "mmap"] }
ctrlc = "3"
rand = "0.9"
rayon = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serial_test = "3.3.1"
tempfile = "3.24.0"
